fix: whyus should not overlap cover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -635,7 +635,6 @@ section {
   background: #1977cc;
   border-radius: 4px;
   color: #fff;
-  z-index: 999;
 }
 
 .why-us .content h3 {
